<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="sync_needed">Sync needed</string>
    <string name="gantt_chart">Gantt Chart</string>
    <string name="more_options">More options</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="insert_timestamp">Insert timestamp</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <!-- "new" is reserved -->
    <string name="set">Set</string>
    <string name="not_now">Not now</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="remove_notebook_link">Remove link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="delete_amount_of_books">Delete %d notebooks</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="show_pending_reminders">Show pending reminders</string>
...

    <string name="repos_options_menu_new_repo">New Repository</string>
    <string name="book_name_already_exists">Notebook %s already exists</string>
    <string name="filter_name_already_exists">Search with the same name already exists</string>
    <string name="failed_creating_directory">Failed creating directory %s</string>
    <string name="version">What\'s new</string>
    <string name="search_hint">Search notes</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_dialog_message">Clear local database?</string>
    <string name="clear_database_summary">Clear local database</string>
    <string name="clear_database_performed">Database cleared</string>

    <string name="getting_started_notebook_name">Getting Started with Orgzly</string>
...
    <string name="tags">Tags</string>
    <string name="book_mtime">Notebook modification time</string>
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="no_repos">No repositories configured</string>
    <string name="no_books">No notebooks found</string>

    <string name="book_encoding">Notebook\'s encoding</string>
    <string name="collecting_notebooks_in_progress">Collecting notebooks…</string>
...
    <string name="webdav_test_error_unknown">Unknown error occurred</string>

    <!-- Share button - error messages (set as title). -->
    <string name="share_action_not_supported">Share action %s is not supported</string>
    <string name="share_type_not_supported">Share type %s is not supported</string>

    <string name="repositories">Repositories</string>
    <string name="repository_not_valid_with_reason">Repository invalid: %s</string>
    <string name="invalid_repo_url">Invalid repository URL “%s”</string>
    <string name="repository_url_already_exists">Repository with this URL already exists</string>
    <string name="new_above">New above</string>
    <string name="new_under">New under</string>
    <string name="new_below">New below</string>
...

    <string name="cycle_visibility">Fold/Unfold All</string>
    <string name="widen_view">Widen View</string>
    <string name="narrow">Narrow to Subtree</string>
    <string name="note_has_been_modified">Note modified</string>
    <string name="discard_or_save_changes">Save changes?</string>
    <string name="rename">Rename</string>
    <string name="rename_book">Rename %s</string>
    <string name="failed_renaming_book">Failed renaming notebook</string>
    <string name="failed_renaming_book_with_reason">Renaming failed: %s</string>
    <string name="renamed_book_from">Renamed from “%s”</string>

    <string name="also_delete_linked_book">Delete linked remote notebook</string>
    <string name="also_delete_linked_books">Delete any linked remote notebooks</string>
    <string name="message_deleting_book_failed">Deleting notebook(s) failed: %s</string>
    <string name="message_book_deleted">Notebook(s) deleted</string>

    <string name="default_priority">Default priority</string>
    <string name="lowest_priority">Lowest priority</string>

    <string name="todo_states">Keywords for active (todo) tasks</string>
    <string name="done_states">Keywords for completed (done) tasks</string>
...
    <string name="display_planning_times">Display planning times</string>
    <string name="display_planning_times_summary">Display scheduled, deadline and closed times</string>
    <string name="density">Density</string>
    <string name="details">Details</string>
    <string name="notebook_details">Notebook details</string>
    <string name="displayed_details_about_notebook">Displayed details about notebook</string>
    <string name="sort_order">Sort order</string>
    <string name="notebooks_sort_order">Notebooks sort order</string>
    <string name="font_size">Font size</string>
    <string name="color_scheme">Color scheme</string>
    <string name="other">Other</string>
    <string name="theme">Theme</string>
    <string name="light_scheme">Light scheme</string>
...

    <string name="list_density_comfortable">Comfortable</string>
    <string name="list_density_cozy">Cozy</string>
    <string name="list_density_compact">Compact</string>

    <string name="notebooks_sort_order_name">Name</string>
    <string name="notebooks_sort_order_modification_time">Modification time</string>

    <plurals name="delete_note_or_notes_with_count_question">
        <item quantity="one">Delete note?</item>
        <item quantity="other">Delete <b>%d</b> notes?</item>
    </plurals>

...
