<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/search_view"
        android:title="@string/options_menu_item_search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/books_options_menu_item_import_book"
        android:icon="@drawable/ic_folder_open"
        app:showAsAction="never"
        android:title="@string/import_org_file"/>

    <item
        android:id="@+id/sync"
        app:showAsAction="never"
        android:title="@string/sync"/>

    <item
        android:id="@+id/activity_action_settings"
        app:showAsAction="never"
        android:title="@string/settings"/>

    <item
        android:id="@+id/show_pending_reminders"
        android:icon="@drawable/ic_alarm"
        app:showAsAction="never"
        android:title="@string/show_pending_reminders"/>
</menu>
